kubernetes/ingress-controller/nginx-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haswithc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haswithc
  template:
    metadata:
      labels:
        app: haswithc
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: html-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-content
        configMap:
          name: custom-html
