kubernetes/ingress-controller/nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haswithc-service
spec:
  selector:
    app: haswithc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
