kubernetes/ingress-controller/nginx-app/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haswithc-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /haswithc
            pathType: Prefix
            backend:
              service:
                name: haswithc-service
                port:
                  number: 80
